--- a/block-BHaacc/style.css
+++ b/block-BHaacc/style.css
@@ -113,8 +113,8 @@ table {
 }
 
 .div00 {
-    background: linear-gradient(to right, rgba(199, 125, 255, 0.7), rgba(198, 246, 160, 0.8)), url(assets/home-bg.jpg) no-repeat;
-    background-size:100% 100%;
+    background: linear-gradient(to right, rgba(199, 125, 255, 0.7), rgba(198, 246, 160, 0.8)), url(assets/home-bg.jpg) center center no-repeat;
+    background-size:cover;
     height:130vh;
     overflow: hidden;
 }
@@ -330,7 +330,7 @@ table {
 .div1414{
     box-shadow:1px 1px 5px gainsboro;
     display:flex;
-    width:48%;
+    flex:0 1 48%;
     margin:22px 0;
 }
 .div15{
@@ -435,7 +435,16 @@ table {
     height:50px;
     padding:0 10px;
     border-radius:5px;
-    color:antiquewhite
+    font-family: 'Roboto', sans-serif;
+    color:rgb(153, 148, 141)
+
+}
+
+.t11{
+    width:47.3%;
+    padding:0 5px;
+    color:rgb(153, 148, 141,0.9);
+
 }
 .t2{
     width:97%;
@@ -444,6 +453,7 @@ table {
     border:none;
     padding:10px 10px;
     border-radius:5px;
+    font-family: 'Roboto', sans-serif;
 }
 .section3{
     background: linear-gradient(to right, rgb(91, 106, 222),rgb(178, 250, 106));
